[package]
name = "ghxs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tungstenite = {version = "0.16.0", features=["async-std-runtime"]}
async-std = "1.10.0"
futures = "0.3.18"
sodiumoxide = "0.2.7"
sha2="0.9.5"
ripemd160="0.9.1"
base58="0.1.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
flurry = "0.3.1"
